src/App.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');

* {
  padding: 0;
  margin: 0; 
}

$dark-background: #222831;
$dark-text-none: rgba(236, 236, 236, 0);
$dark-text-fill: rgba(236, 236, 236, 1);
$dark-button-fill: #f2a365;
$dark-bg-text-fill: rgba(48, 71, 94,0.05);

.App {
  font-family: 'Open Sans', sans-serif;
  background-color: #ffb997;
  max-width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  position: relative;
}

  .nav_top {
    height: 5%;
    position: relative;
  }
  
  .nav_name {
    cursor: pointer;
    display: inline-block;
    color: rgba(10, 3, 43,0);
    letter-spacing: -.15;
    animation-name: slide;
    animation-delay: 1.7s;
    animation-duration: .8s;
    animation-timing-function: ease-in;
    animation-fill-mode: forwards;
  }
  
  h2 {
    font-family: 'Playfair Display', serif;
    font-weight: 800;
    padding: 1rem;
    font-size: 1.3rem;
    letter-spacing: -.03rem;
    color: rgba(10, 3, 43,0);
  }
  
  .footer {
    font-weight: 300;
    font-size: .9rem;
    text-align: center;
    width: 100%;
    height: 1rem;
    margin-bottom: 1rem;
    bottom: 0;
    position: absolute;
  }
  
  .lines{
    display: block;
    margin-top: 1rem;
    border-top: .1rem solid rgba(10, 3, 43,0);
    border-bottom: .1rem solid rgba(10, 3, 43,0);
    color: rgba(117, 49, 85, 0);
    width: 100%;
    text-align: center;
    position: relative;
    padding: 1.5rem 0 1.5rem 0;
    animation-name: slide_words;
    animation-delay: 3.5s;
    animation-duration: .8s;
    animation-fill-mode: forwards;
  }
  
  .overlap {
    z-index: 1000;
    margin-top: 1rem;
    border-top: .1rem solid #fff;
    border-bottom: .1rem solid #000;
  }
  
  .loop_text {
    font-weight: 800;
    word-spacing: 1.2rem;
    position: absolute; 
    top: 25%;
    transform: translate(0, -50%);
    animation-name: words;
    animation-timing-function: linear;
    animation-duration: 20s;
    animation-iteration-count: infinite;
  }
  
  .invis_right {
    position: absolute;
    background-color: #ffb997;
    top: 0%;
    right: 0;
    width: 12%;
    height: 100%;
  }
  
  .invis_left {
    position: absolute;
    background-color:#ffb997;
    top: 0;
    left: 0;
    width: 12%;
    height: 100%;
  }
  
  .background_text {
    position: absolute;
    max-width: 100%;
    font-size: 20rem;
    max-width: 100%;
    top: 38%;
    color: rgba(117, 49, 85, 0);
    font-family: helvetica, arial, sans-serif;
    font-weight: 900;
    z-index: 2;
    animation-name: bg_text_1;
    animation-delay: 2.3s;
    animation-fill-mode: forwards;
    animation-duration: .8s;
    animation-timing-function: ease-in-out;
    user-select: none;
  }
  
  .background_text_2 {
    position: absolute;
    font-size: 20rem;
    top: 65%;
    color: rgba(117, 49, 85, 0);
    font-family: helvetica, arial, sans-serif;
    font-weight: 900;
    z-index: 2;
    animation-name: bg_text_2;
    animation-delay: 2.3s;
    animation-fill-mode: forwards;
    animation-duration: .8s;
    animation-timing-function: ease-in-out;
    user-select: none;
  }
  
  ul {
    display: flex;
    font-variant: small-caps;
    font-size: 1.8rem;
    font-weight: 300;
    list-style-type: none;
    max-width: 100%;
    text-align: center;
    padding: 2rem;
  }
  
  li {
    cursor: pointer;
    text-align: center;
    width:15rem;
    transition: all 0.5s;
    max-width: 100%;
    z-index: 100;
  }
  
  li:hover {
    transform: scale(1.1);
  }

  .nav{
    color: rgba(10, 3, 43,0);
    z-index: 100;
    position: absolute;
    top: 50%;
    left: 50%;
    visibility: hidden;
    transform: translate(-50%, -50%);
    animation-name: slide;
    animation-delay: 2.2s;
    animation-duration: 1s;
    animation-timing-function: ease-in;
    animation-fill-mode: forwards;
    max-width: 100%;
    height: auto;
  }

  .resume {
    width: 100% !important;
    transform: translate(0, 0) !important;

    .title_resume {
      font-weight: bold;
      display: block;
      font-size: 1.2rem;
      margin-top: 3rem !important;
    }

    p {
      max-width: 100% !important;
      margin-top: 1.3rem !important;
    }

    .short_description {
      font-style: italic;
      margin-top: 1rem;
      font-size: .7rem;
    }
  }
  
  .container_modal {
    display: block;
    position: relative;
    transform: translate(0, 50%);
    background-color: rgba(235, 235, 235, 0);
    color: rgba(10, 3, 43,0);
    padding: 1rem;
    width: 50%;
    height: 100%;
    z-index: 5;
    margin-top: 2rem;
  }
  
  .container_modal h3 {
    position: relative;
    color: rgba(10, 3, 43,0);
    font-family: 'Playfair Display', serif;
    font-weight: 800;
    font-size: 3rem;
    left: -3%;
    animation-name: slide_left_container;
    animation-duration: .8s;
    animation-delay: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
  }
  
  .container_modal p {
    margin-top: 1rem;
    display: block;
    max-width: 65%;
    margin-bottom: 0;
  }
  
  .container_modal img {
    position: absolute;
    right: -20%;
    max-width: 50%;
    bottom: -50%;
    opacity: 0;
    animation-name: slide_left_picture;
    animation-duration: .8s;
    animation-delay: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
    display: none;
  }
  
  .container_modal .back {
    display: inline-block;
    background-color: rgba(246, 126, 125,0);
    color: rgba(10, 3, 43,0);
    padding: .5rem 2rem .5rem 2rem;
    border-radius: 1rem;
    cursor: pointer;
    bottom: 0;
    left: 0;
    transition: all 0.5s;
    animation-name: slide_left_button;
    animation-duration: .8s;
    animation-delay: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
  }
  
  .container_modal .icons {
    width: 60%;
  }
  
  .container_modal .icons .fab {
    width: 20%;
    justify-content: space-between;
    font-size: 1.4rem;
    margin-top: 0;
    text-decoration: none;
    color: rgba(10, 3, 43,0);
    animation-name: slide_left_container;
    animation-duration: .8s;
    animation-delay: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
  }
  
  .container_modal .back:hover {
    transform: scale(1.1);
  }
  
  .animation_text {
    font-family: 'Playfair Display', serif;
    color: rgba(10, 3, 43,0);
    font-size: 1.8rem;
    padding: 1rem;
    letter-spacing: -.15rem;
    font-weight: 900;
    width: 200%;
    letter-spacing: -.1rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    animation-name: animation;
    animation-delay: .5s;
    animation-duration: 1.2s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
  }
  
  .slide_left {
    color: rgba(10, 3, 43,0);
    animation-name: slide_left;
    animation-duration: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
  }
  
  .none {
    display: none;
  }
  
  .slide_left_container {
    animation-name: slide_left_container;
    animation-duration: .8s;
    animation-delay: .8s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
    background-color: rgba(0, 0, 0, 0);
    color: rgba(10, 3, 43,0);
  }

  .resume-height {
    height: 100%;
    padding: 1rem;
  }
  
  @keyframes animation {
    0% {
      letter-spacing: 1.8rem;
      color: rgba(10, 3, 43,1);
    }
    50% {
      letter-spacing: 0;
    }
    75% {
      color: rgba(10, 3, 43,1);
    }
    99% {
      color: rgba(10, 3, 43,0);
    }
    100%{
      display: none;
    }
  }
  
  @keyframes slide_words {
    0% {
      color: rgba(10, 3, 43,0);
      border-top: .1rem solid rgba(10, 3, 43,0);
      border-bottom: .1rem solid rgba(10, 3, 43,0);
    }
    100% {
      color: rgba(10, 3, 43,1);
      border-top: .1rem solid rgba(10, 3, 43,1);
      border-bottom: .1rem solid rgba(10, 3, 43,1);
    }
  }
  
  @keyframes slide {
    0% {
      visibility: hidden;
      color: rgba(10, 3, 43,0);
    }
    100% {
      visibility: visible;
      color: rgba(10, 3, 43,1);
    }
  }
  
  @keyframes slide_left {
    0%{
      color: rgba(10, 3, 43,1);
      display: none;
    }
    100%{
      color: rgba(10, 3, 43,0);
      transform: translateX(-5rem);
      visibility: hidden;
    }
  }
  
  @keyframes slide_left_container {
    0%{
      right: -20%;
      color: rgba(10, 3, 43,0);
    }
    100%{
      right: 0%;
      color: rgba(10, 3, 43,1);
    }
  }
  
  @keyframes slide_left_picture {
    0%{
      opacity: 0;
      right: -30%;
    }
    100%{
      opacity: 100%;
      right: -20%;
    }
  }
  
  
  @keyframes slide_left_button {
    0%{
      color: rgba(10, 3, 43,0);
      background-color: rgba(246, 126, 125,0);
      right: -30%;
    }
    100%{
      color: rgba(10, 3, 43,1);
      background-color: rgba(246, 126, 125,1);
      right: -20%;
    }
  }
  
  @keyframes bg_text_1 {
    from {
      left: -20%;
      color: rgba(117, 49, 85, 0);
    }
    to {
      left: -5.6%;
      color: rgba(117, 49, 85, 0.05);
    }
  }
  
  @keyframes bg_text_2 {
    from {
      left: 30%;
      color: rgba(117, 49, 85, 0);
    }
    to {
      left: 15%;
      color: rgba(117, 49, 85, 0.05);
    }
  }
  
  @keyframes words {
    from {
      transform: translateX(+120%);
    }
    to {
      transform: translateX(-100%);
    }
  }
  
  @media screen and (max-width: 768px) {
    .App {
      font-family: 'Open Sans', sans-serif;
      background-color: #ffb997;
      max-width: 100%;
      height: 100vh;
      position: relative;
    }

    .lines {
      display: none;
    }
  
    .container_modal {
      width: 90%;
      height: 100%;
    }
  
    .container_modal h3 {
      position: relative;
      top: 0;
      left: 0;
    }
  
    .container_modal p {
      max-width: 90%;
    }
  
    .container_modal img {
      display: none;
    }
  
    .nightmode span {
      display: none;
    }

    .short_description {
      display: none;
    }

    .footer {
      display: none;
    }
  }

  @media screen and (min-width: 768px) {
    .container_modal {
      height: 100%;
    }
  }

